--- a/HRConnect1/Client/wwwroot/index.html
+++ b/HRConnect1/Client/wwwroot/index.html
@@ -27,6 +27,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
